Resolved bug for CSS grid on mobile view. Updated styling for footer and content for home page.

--- a/stylesheets/mainStylesheet.css
+++ b/stylesheets/mainStylesheet.css
@@ -157,7 +157,7 @@ footer {
     align-items: center;
     font-size: 0.8rem;
     color: white;
-    padding: 0 0 40px 0;
+    padding: 40px 0 40px 0;
 }
 
 /* Ocean container. */
@@ -190,7 +190,7 @@ footer {
 /* Portfolio styling */
 .portfolioGrid {
     display: grid;
-    gap: 2.0rem;
+    gap: 2rem 1.5rem;
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
     margin: 50px 0 0 0;
@@ -248,7 +248,7 @@ footer {
 /* Resume styling */
 .resumeGrid {
     display: grid;
-    gap: 2rem;
+    gap: 2rem 1.5rem;
     grid-template-columns: repeat(4, 1fr);
     width: 100%;
     margin: 50px 0 0 0;
@@ -353,69 +353,37 @@ footer {
         display: none;
     }
 
+    footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 0.8rem;
+        color: white;
+        padding: 0 0 40px 0;
+    }
+
     .socialMediaGrid {
         display: flex;
     }
 
     /* Portfolio Styling */
     div.portfolioGrid {
-        display: grid;
-        gap: 1.5rem;
-        grid-template-columns: 1fr;
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem 1rem;
         width: 100%;
         height: 30%;
         margin: 40px 0;
-    }
-    /* Portfolio Website */
-    div.portfolioGrid .portfolioCardContainer:nth-child(1) {
-        grid-column-start: 1;
-        grid-row-start: 1;
-    }
-    /* To-do List Application */
-    div.portfolioGrid .portfolioCardContainer:nth-child(2) {
-        grid-column-start: 1;
-        grid-row-start: 2;
-    }
-
-     /* Basic Calculator */
-    div.portfolioGrid .portfolioCardContainer:nth-child(3) {
-        grid-column-start: 1;
-        grid-row-start: 3;
-    }
-
-     /* Weather Application */
-    div.portfolioGrid .portfolioCardContainer:nth-child(4) {
-        grid-column-start: 1;
-        grid-row-start: 4;
     }
 
     /* Resume Styling */
     div.resumeGrid {
-        display: grid;
-        gap: 1.5rem;
-        grid-template-columns: 1fr;
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem 1rem;
         width: 100%;
         height: 30%;
         margin: 40px 0;
-    }
-    /* Work experience */
-    div.resumeGrid .resumeCardContainer:nth-child(1) {
-        grid-column-start: 1;
-        grid-row-start: 1;
-        grid-column: span 4;
-    }
-    /* Qualifications */
-    div.resumeGrid .resumeCardContainer:nth-child(2) {
-        grid-column-start: 1;
-        grid-row-start: 2;
-        grid-column: span 4;
-    }
-
-    /* Skills */
-    div.resumeGrid .resumeCardContainer:nth-child(3) {
-        grid-column-start: 1;
-        grid-row-start: 3;
-        grid-column: span 4;
     }
 }
 
@@ -489,6 +457,15 @@ footer {
         display: none;
     }
 
+    footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 0.8rem;
+        color: white;
+        padding: 0 0 40px 0;
+    }
+
     .socialMediaGrid {
         display: flex;
     }
@@ -496,7 +473,7 @@ footer {
     /* Portfolio styling */
     div.portfolioGrid {
         display: grid;
-        gap: 1.5rem;
+        gap: 1.5rem 1rem;
         grid-template-columns: repeat(3, 1fr);
         width: 100%;
         height: 30%;
@@ -529,31 +506,12 @@ footer {
 
     /* Resume Styling */
     div.resumeGrid {
-        display: grid;
+        display: flex;
+        flex-direction: column;
         gap: 1.5rem;
-        grid-template-columns: 1fr;
         width: 100%;
         height: 30%;
         margin: 40px 0;
-    }
-    /* Work experience */
-    div.resumeGrid .resumeCardContainer:nth-child(1) {
-        grid-column-start: 1;
-        grid-row-start: 1;
-        grid-column: span 4;
-    }
-    /* Qualifications */
-    div.resumeGrid .resumeCardContainer:nth-child(2) {
-        grid-column-start: 1;
-        grid-row-start: 2;
-        grid-column: span 4;
-    }
-
-    /* Skills */
-    div.resumeGrid .resumeCardContainer:nth-child(3) {
-        grid-column-start: 1;
-        grid-row-start: 3;
-        grid-column: span 4;
     }
 }
 
